# joynr

./: .clang-format  .eslintrc.js  .gitattributes  .gitignore  .gitlint  .gitreview  .prettierrc.js  .yamllint  DISCLAIMER  LICENSE_INFO  NOTICE  README.md  joynr-build-cpp.sh  joynr-build-java.bat  joynr-setup-android-sdk.sh  package.json  pom.xml  tsconfig.json
cpp/: .gitignore  CMakeLists.txt  DEPENDENCY_LICENSES.txt  Doxyfile  JoynrConfig.cmake.in  JoynrConfigVersion.cmake.in  LICENSE.txt  NOTICE  NOTICE-CPP  README-CPP.txt  doxygen.cfg.in  pom.xml  run_doxygen.sh
cpp/CMake/: AddClangFormat.cmake  AddClangTidy.cmake  AddExternalProject.cmake  AddGtestGmock.cmake  AddIncludeWhatYouUse.cmake  AddWebSocketPP.cmake  AddressSanitizerTarget.cmake  CheckBoostImportTargets.cmake  CheckCurlImportTargets.cmake  CheckDltImportTargets.cmake  CheckMOCOCRWImportTargets.cmake  CheckMosquittoImportTargets.cmake  CheckOpenSSLImportTargets.cmake  CheckSMRFImportTargets.cmake  CheckWebSocketPPImportTargets.cmake  CommonCMakeUtils.cmake  CoverageTarget.cmake  FindGMock.cmake  Findjsmn.cmake  Findmosquitto.cmake  GenerateJoynrExports.cmake  GlobalIncludeDir.cmake  LocateProgram.cmake  ObjectLibraryTargetUtils.cmake  OutofdirTargetSources.cmake  Sanitizers.cmake  ThreadSanitizerTarget.cmake  UBSanitizerTarget.cmake  gmock-1.6.0-Clang.patch  gtest-1.6.0-Clang.patch  jsmn-fpic.patch  libwebsockets-FixEmptyExtensions.patch
cpp/CMake/CoverageTarget/: CheckThresholds.cmake  CoverageTargetLCOV.cmake  (+3 more)
cpp/cluster-controller/: CMakeLists.txt  ClusterControllerSettings.cpp  main.cpp
cpp/common/: CMakeLists.txt  CallContext.cpp  CallContextStorage.cpp  CallContextStorage.h  CapabilityUtils.cpp  DelayedScheduler.cpp  DelayedSchedulerOld.cpp  DispatcherUtils.cpp  EndpointAddressBase.cpp  InterfaceAddress.cpp  InterfaceAddress.h  JoynrConfig.h.cmake  MessagingQos.cpp  MulticastSubscriptionQos.cpp  ObjectWithDecayTime.cpp  OnChangeSubscriptionQos.cpp  OnChangeWithKeepAliveSubscriptionQos.cpp  PeriodicSubscriptionQos.cpp  QtOnChangeSubscriptionQos.cpp  QtOnChangeWithKeepAliveSubscriptionQos.cpp  QtPeriodicSubscriptionQos.cpp  QtSubscriptionQos.cpp  RuntimeConfig.h.in  Settings.cpp  SettingsMerger.cpp  SettingsMerger.h  StdOnChangeSubscriptionQos.cpp  StdOnChangeWithKeepAliveSubscriptionQos.cpp  StdPeriodicSubscriptionQos.cpp  StdSubscriptionQos.cpp  SteadyTimer.cpp  SubscriptionQos.cpp  SubscriptionUtil.cpp  SystemServicesSettings.cpp  TrackableObject.cpp  UnicastSubscriptionQos.cpp  Url.cpp  Util.cpp  Variant.cpp
cpp/common-api/: CMakeLists.txt  NOTICE  pom.xml
cpp/cpp-generator/: NOTICE  build.properties  pom.xml
cpp/distribution/: joynr.spec  make-linux-distribution.sh
cpp/jsonserializer/: ArraySerializer.cpp  CMakeLists.txt  ClassDeserializer.cpp  ClassSerializer.cpp  EnumDeserializer.cpp  EnumDeserializer.h  IDeserializer.h  ISerializer.h  JoynrMessageSerializer.cpp  JoynrMessageSerializer.h  JsonSerializer.cpp  JsonTokenizer.cpp  JsonTokenizer.h  OnChangeSubscriptionQosSerializer.cpp  OnChangeSubscriptionQosSerializer.h  OneWayRequestSerializer.cpp  OneWayRequestSerializer.h  PeriodicSubscriptionQosSerializer.cpp  PeriodicSubscriptionQosSerializer.h  PrimitiveDeserializer.cpp  ReplySerializer.cpp  ReplySerializer.h  RequestSerializer.cpp  RequestSerializer.h  SerializerRegistry.cpp  SubscriptionQosSerializer.cpp  SubscriptionQosSerializer.h
cpp/libjoynr/: CMakeLists.txt  CapabilitiesRegistrar.cpp  JsonExceptionSerializer.cpp  JsonExceptionSerializer.h  LibjoynrSettings.cpp  NOTICE  TimePoint.cpp  pom.xml
cpp/libjoynrclustercontroller/: CMakeLists.txt  ClusterControllerCallContext.cpp  ClusterControllerCallContext.h  ClusterControllerCallContextStorage.h  ClusterControllerSettings.cpp
cpp/libs/: CMakeLists.txt  NOTICE  pom.xml
cpp/runtimes/: CMakeLists.txt  JoynrMetaTypes.cpp  JoynrMetaTypes.h  JoynrRuntime.cpp  JoynrRuntimeImpl.cpp  StartClusterController.cpp
cpp/tests/: .gitignore  AddTest.cmake  CMakeLists.txt  JoynrTest.cpp  JoynrTest.h  NOTICE  PrettyPrint.cpp  PrettyPrint.h  TestMain.cpp  main.cpp  pom.xml
examples/joynr-system-integration-test/: CMakeLists.txt  NOTICE  NOTICE-CPP  pom.xml
examples/radio-app/: .gitignore  CMakeLists.txt  NOTICE  pom.xml
inter-language-test/: .gitignore  CMakeLists.txt  NOTICE  package.json  pom.xml  run-inter-language-tests.sh
tests/: .gitignore  CMakeLists.txt  NOTICE  pom.xml
tests/dummyKeychain/: CMakeLists.txt  DummyKeychainImpl.cpp
tests/gcd-e2e-test/: pom.xml  run-gcd-e2e-tests.sh
tests/graceful-shutdown-test/: NOTICE  README.md  build_all.sh  docker-compose.yml  pom.xml  run
tests/inter-language-test/: .gitignore  CMakeLists.txt  NOTICE  NOTICE-JS  README.md  README.txt  bundle.js  package.json  pom.xml  run-inter-language-tests.sh  tsconfig.json
tests/inter-language-test-jee/: InterLanguageTestJee.md  NOTICE  jetty-log4j.properties  pom.xml
tests/joynr-hivemq-shared-subscriptions/: NOTICE  README.md  build_all.sh  docker-compose.yml  pom.xml  run_tests.sh
tests/performance/: .gitignore  CMakeLists.txt  NOTICE  README_JS  package.json  pom.xml
tests/performance-test/: .gitignore  CMakeLists.txt  NOTICE  NOTICE-JS  README_JS  package.json  pom.xml  run-performance-tests.sh  tsconfig.json
tests/performance-test-jee/: .gitignore  NOTICE  pom.xml
tests/pt-java/: README.md  pom.xml  run-performance-test.sh
tests/robustness/: CMakeLists.txt  NOTICE  NOTICE-CPP  kill-clustercontroller.sh  package.json  pom.xml  start-clustercontroller.sh
tests/robustness-test/: .gitignore  CMakeLists.txt  NOTICE  NOTICE-JS  jest.config.js  kill-provider.sh  package.json  pom.xml  run-mqtt-cc-robustness-tests.sh  run-robustness-tests.sh  start-clustercontroller.sh  start-provider.sh  tsconfig.json
tests/robustness-test-base/: NOTICE  pom.xml
tests/robustness-test-env/: CMakeLists.txt  NOTICE  pom.xml  run-prov-cons-robustness-tests.sh
tests/standalone-pt/: pom.xml
tests/system-integration-test/: .gitignore  CMakeLists.txt  NOTICE  README.md  pom.xml
tests/test-base/: NOTICE  NOTICE-JS  package.json  pom.xml
(+6622 files in other folders)
